@@ -63,8 +63,7 @@ main(int argc, char *argv[])
 		exit(EXIT_FAILURE);
 	}
 
-	k = ldns_rr_new_frm_fp(keyfp, 0, NULL, NULL);
-	if (!k) {
+	if (ldns_rr_new_frm_fp(&k, keyfp, 0, NULL, NULL) != LDNS_STATUS_OK) {
 		fprintf(stderr, "Could not read public key from file %s\n", keyname);
 		exit(EXIT_FAILURE);
 	}
