@@ -63,7 +63,13 @@ enum ldns_enum_status
         LDNS_STATUS_WIRE_INCOMPLETE_AUTHORITY,
         LDNS_STATUS_WIRE_INCOMPLETE_ADDITIONAL,
         LDNS_STATUS_NO_DATA,
-        LDNS_STATUS_CERT_BAD_ALGORITHM
+        LDNS_STATUS_CERT_BAD_ALGORITHM,
+        LDNS_STATUS_SYNTAX_TYPE_ERR,
+        LDNS_STATUS_SYNTAX_CLASS_ERR,
+        LDNS_STATUS_SYNTAX_TTL_ERR,
+        LDNS_STATUS_SYNTAX_RDATA_ERR,
+        LDNS_STATUS_SYNTAX_DNAME_ERR,
+        LDNS_STATUS_SYNTAX_ERR
 };
 typedef enum ldns_enum_status ldns_status;
 
