@@ -261,17 +261,19 @@ void ldns_rr_free(ldns_rr *rr);
  * creates an rr from a string.
  * The string should be a fully filled-in rr, like
  * ownername &lt;space&gt; TTL &lt;space&gt; CLASS &lt;space&gt; TYPE &lt;space&gt; RDATA.
+ * \param[out] n the rr to return
  * \param[in] str the string to convert
  * \param[in] default_ttl pointer to a default ttl for the rr. If 0 DEF_TTL will be used
  * \param[in] origin when the owner is relative add this
  * \param prev the previous ownername. the function overwrite this with
  * the current found ownername.
- * \return the new rr
+ * \return a status msg describing an error or LDNS_STATUS_OK
  */
-ldns_rr* ldns_rr_new_frm_str(const char *str, uint16_t default_ttl, ldns_rdf *origin, ldns_rdf **prev);
+ldns_status ldns_rr_new_frm_str(ldns_rr **n, const char *str, uint16_t default_ttl, ldns_rdf *origin, ldns_rdf **prev);
 
 /**
  * creates a new rr from a file containing a string.
+ * \param[out] rr the new rr
  * \param[in] fp the file pointer to use
  * \param[in] default_ttl pointer to a default ttl for the rr. If NULL DEF_TTL will be used
  *            the pointer will be updated if the file contains a $TTL directive
@@ -279,12 +281,14 @@ ldns_rr* ldns_rr_new_frm_str(const char *str, uint16_t default_ttl, ldns_rdf *or
  * 	      the pointer will be updated if the file contains a $ORIGIN directive
  * \param[in] prev when the owner is whitespaces use this as the * ownername
  *            the pointer will be updated after the call
- * \return ldns_rr*
+ * \return a ldns_status with an error or LDNS_STATUS_OK
  */
-ldns_rr* ldns_rr_new_frm_fp(FILE *fp, uint16_t *default_ttl, ldns_rdf **origin, ldns_rdf **prev);
+ldns_status ldns_rr_new_frm_fp(ldns_rr **rr, FILE *fp, uint16_t *default_ttl, ldns_rdf **origin, ldns_rdf **prev);
 
 /**
  * creates a new rr from a file containing a string.
+ * \param[out] rr the new rr
+ * \param[in] fp the file pointer to use
  * \param[in] fp the file pointer to use
  * \param[in] default_ttl a default ttl for the rr. If 0 DEF_TTL will be used
  *            the pointer will be updated if the file contains a $TTL directive
@@ -293,9 +297,9 @@ ldns_rr* ldns_rr_new_frm_fp(FILE *fp, uint16_t *default_ttl, ldns_rdf **origin, 
  * \param[in] line_nr pointer to an integer containing the current line number (for debugging purposes)
  * \param[in] prev when the owner is whitespaces use this as the * ownername
  *            the pointer will be updated after the call
- * \return ldns_rr*
+ * \return a ldns_status with an error or LDNS_STATUS_OK
  */
-ldns_rr* ldns_rr_new_frm_fp_l(FILE *fp, uint16_t *default_ttl, ldns_rdf **origin, ldns_rdf **prev, int *line_nr);
+ldns_status ldns_rr_new_frm_fp_l(ldns_rr **rr, FILE *fp, uint16_t *default_ttl, ldns_rdf **origin, ldns_rdf **prev, int *line_nr);
 
 /**
  * sets the owner in the rr structure.
