@@ -87,8 +87,8 @@ ldns_rr_free(ldns_rr *rr)
  * or
  * miek.nl. IN MX 10 elektron.atoom.net
  */
-ldns_rr *
-ldns_rr_new_frm_str(const char *str, uint16_t default_ttl, ldns_rdf *origin, 
+ldns_status
+ldns_rr_new_frm_str(ldns_rr **newrr, const char *str, uint16_t default_ttl, ldns_rdf *origin, 
 		ldns_rdf **prev)
 {
 	ldns_rr *new;
@@ -133,7 +133,7 @@ ldns_rr_new_frm_str(const char *str, uint16_t default_ttl, ldns_rdf *origin,
 	rd = LDNS_XMALLOC(char, LDNS_MAX_RDFLEN);
 	b64 = LDNS_XMALLOC(char, LDNS_MAX_RDFLEN);
 	if (!new || !owner || !ttl || !clas || !rdata || !rr_buf || !rd_buf || !rd | !b64) {
-		return NULL;
+		return LDNS_STATUS_MEM_ERR;
 	}
 	r_cnt = 0;
 	ttl_val = 0;
@@ -151,7 +151,7 @@ ldns_rr_new_frm_str(const char *str, uint16_t default_ttl, ldns_rdf *origin,
 		LDNS_FREE(rd_buf);
 		ldns_buffer_free(rr_buf); 
 		ldns_rr_free(new);
-		return NULL;
+		return LDNS_STATUS_SYNTAX_ERR;
 	}
 	
 	if (ldns_bget_token(rr_buf, ttl, "\t\n ", 21) == -1) {
@@ -163,7 +163,7 @@ ldns_rr_new_frm_str(const char *str, uint16_t default_ttl, ldns_rdf *origin,
 		LDNS_FREE(rd_buf);
 		ldns_buffer_free(rr_buf);
 		ldns_rr_free(new);
-		return NULL;
+		return LDNS_STATUS_SYNTAX_TTL_ERR;
 	}
 	ttl_val = ldns_str2period(ttl, &endptr); /* i'm not using endptr */
 	if (ttl_val == 0) {
@@ -197,7 +197,7 @@ ldns_rr_new_frm_str(const char *str, uint16_t default_ttl, ldns_rdf *origin,
 			LDNS_FREE(rd_buf);
 			ldns_buffer_free(rr_buf);
 			ldns_rr_free(new);
-			return NULL;
+			return LDNS_STATUS_SYNTAX_CLASS_ERR;
 		}
 		clas_val = ldns_get_rr_class_by_name(clas);
 		/* class can be left out too, assume IN, current
@@ -222,7 +222,7 @@ ldns_rr_new_frm_str(const char *str, uint16_t default_ttl, ldns_rdf *origin,
 			LDNS_FREE(rd_buf);
 			ldns_buffer_free(rr_buf);
 			ldns_rr_free(new);
-			return NULL;
+			return LDNS_STATUS_SYNTAX_TYPE_ERR;
 		}
 	}
 	
@@ -242,7 +242,7 @@ ldns_rr_new_frm_str(const char *str, uint16_t default_ttl, ldns_rdf *origin,
 		*/
 	}
 
-	ldns_buffer_new_frm_data( rd_buf, rdata, strlen(rdata));
+	ldns_buffer_new_frm_data(rd_buf, rdata, strlen(rdata));
 
 	if (strlen(owner) <= 1 && strncmp(owner, "@", 1) == 0) {
 		if (origin) {
@@ -273,7 +273,7 @@ ldns_rr_new_frm_str(const char *str, uint16_t default_ttl, ldns_rdf *origin,
 					LDNS_FREE(rd_buf);
 					ldns_buffer_free(rr_buf);
 					ldns_rr_free(new);
-					return NULL;
+					return LDNS_STATUS_SYNTAX_ERR;
 			}
 			
 			ldns_rr_set_owner(new, ldns_dname_new_frm_str(owner));
@@ -289,7 +289,7 @@ ldns_rr_new_frm_str(const char *str, uint16_t default_ttl, ldns_rdf *origin,
 					LDNS_FREE(rd_buf);
 					ldns_buffer_free(rr_buf);
 					ldns_rr_free(new);
-					return NULL;
+					return LDNS_STATUS_SYNTAX_ERR;
 				} 
 			}
 			if (prev) {
@@ -364,7 +364,7 @@ ldns_rr_new_frm_str(const char *str, uint16_t default_ttl, ldns_rdf *origin,
 							/* something goes very wrong here */
 							ldns_buffer_free(rd_buf);
 							LDNS_FREE(rd);
-							return NULL;
+							return LDNS_STATUS_SYNTAX_RDATA_ERR;
 						}
 						hex_data_size = (uint16_t) atoi(rd);
 						/* copy the hex chars into hex str (which is 2 chars per byte) */
@@ -373,7 +373,7 @@ ldns_rr_new_frm_str(const char *str, uint16_t default_ttl, ldns_rdf *origin,
 							/* malloc error */
 							ldns_buffer_free(rd_buf);
 							LDNS_FREE(rd);
-							return NULL;
+							return LDNS_STATUS_SYNTAX_RDATA_ERR;
 						}
 						cur_hex_data_size = 0;
 						while(cur_hex_data_size < 2 * hex_data_size) {
@@ -408,8 +408,8 @@ ldns_rr_new_frm_str(const char *str, uint16_t default_ttl, ldns_rdf *origin,
 							/* check if the origin should be concatenated */
 							if (rd_strlen > 1 && !ldns_dname_str_absolute(rd) && origin) {
 								if (!ldns_dname_cat(r, origin)) {
-									/* don't know if to quit */
-									/* return NULL; */
+									/* don't change this (yet MIEK */
+									/* return LDNS_STATUS_SYNTAX_ERR; */
 								}
 							}
 							break;
@@ -428,7 +428,7 @@ ldns_rr_new_frm_str(const char *str, uint16_t default_ttl, ldns_rdf *origin,
 							ldns_buffer_free(rr_buf);
 							LDNS_FREE(rdata);
 							ldns_rr_free(new);
-							return NULL;
+							return LDNS_STATUS_SYNTAX_RDATA_ERR;
 						}
 						
 					}
@@ -448,27 +448,32 @@ ldns_rr_new_frm_str(const char *str, uint16_t default_ttl, ldns_rdf *origin,
 	LDNS_FREE(b64);
 	ldns_buffer_free(rd_buf);
 	ldns_buffer_free(rr_buf);
-
 	LDNS_FREE(rdata);
-	return new;
+
+	if (newrr && *newrr) {
+		*newrr = new;
+	}
+	return LDNS_STATUS_OK;
 }
 
-ldns_rr *
-ldns_rr_new_frm_fp(FILE *fp, uint16_t *ttl, ldns_rdf **origin, ldns_rdf **prev)
+ldns_status
+ldns_rr_new_frm_fp(ldns_rr **newrr, FILE *fp, uint16_t *ttl, ldns_rdf **origin, ldns_rdf **prev)
 {
-	return ldns_rr_new_frm_fp_l(fp, ttl, origin, prev, NULL);
+	return ldns_rr_new_frm_fp_l(newrr, fp, ttl, origin, prev, NULL);
 }
 
-ldns_rr *
-ldns_rr_new_frm_fp_l(FILE *fp, uint16_t *default_ttl, ldns_rdf **origin, ldns_rdf **prev, int *line_nr)
+ldns_status
+ldns_rr_new_frm_fp_l(ldns_rr **newrr, FILE *fp, uint16_t *default_ttl, ldns_rdf **origin, ldns_rdf **prev, int *line_nr)
 {
         char *line;
 	ldns_rr *rr;
 	char *keyword;
 	uint16_t ttl;
 	ldns_rdf *tmp;
+	ldns_status s;
 
 	rr = NULL;
+	s = LDNS_STATUS_ERR;
 	if (default_ttl) {
 		ttl = *default_ttl;
 	} else {
@@ -477,7 +482,7 @@ ldns_rr_new_frm_fp_l(FILE *fp, uint16_t *default_ttl, ldns_rdf **origin, ldns_rd
 
         line = LDNS_XMALLOC(char, LDNS_MAX_LINELEN + 1);
         if (!line) {
-                return NULL;
+                return LDNS_STATUS_MEM_ERR;
         }
 
 	if (line_nr) {
@@ -487,7 +492,7 @@ ldns_rr_new_frm_fp_l(FILE *fp, uint16_t *default_ttl, ldns_rdf **origin, ldns_rd
         /* read an entire line in from the file */
         if (ldns_fget_token_l(fp, line, LDNS_PARSE_SKIP_SPACE, LDNS_MAX_LINELEN, line_nr) == -1) {
 		LDNS_FREE(line);
-                return NULL;
+                return LDNS_STATUS_SYNTAX_ERR;
         }
 
 	if ((keyword = strstr(line, "$ORIGIN "))) {
@@ -499,7 +504,7 @@ ldns_rr_new_frm_fp_l(FILE *fp, uint16_t *default_ttl, ldns_rdf **origin, ldns_rd
 		if (!tmp) {
 			/* could not parse what next to $ORIGIN */
 			LDNS_FREE(line);
-			return NULL; /* need better feedback */
+			return LDNS_STATUS_SYNTAX_DNAME_ERR;
 		}
 		*origin = tmp;
 		
@@ -509,14 +514,17 @@ ldns_rr_new_frm_fp_l(FILE *fp, uint16_t *default_ttl, ldns_rdf **origin, ldns_rd
 		}
 	} else {
 		if (origin && *origin) {
-			rr = ldns_rr_new_frm_str((const char*) line, ttl, *origin, prev);
+			s = ldns_rr_new_frm_str(&rr, (const char*) line, ttl, *origin, prev);
 		} else {
-			rr = ldns_rr_new_frm_str((const char*) line, ttl, NULL, prev);
+			s = ldns_rr_new_frm_str(&rr, (const char*) line, ttl, NULL, prev);
 		}
 	
 	}
 	LDNS_FREE(line);
-	return rr;
+	if (newrr && *newrr) {
+		*newrr = rr;
+	}
+	return s;
 }
 
 void
