@@ -43,6 +43,8 @@ XX Jan 2006: 1.1.0: ldns-team
           o ldns_rr_new_frm_fp
 	  o ldns_rr_new_frm_fp_l
 	  Which also get an extra variable
+	  Also the function has been changed to return a status message.
+	  The compiled RR is returned in the first argument.
 	* tsig.h: internal used functions are now static:
 	  ldns_digest_name and ldns_tsig_mac_new
 	* ldns_key_rr2ds has an extra argument to specify the hash to
